[package]
name = "JsonParser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_json = { version = "1.0.111", features = ["raw_value", "indexmap"] }
